# pg-schema-version

./: Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
pg_schema_version/: __init__.py  psql.py  script.py  utils.py
tests/: .gitignore  Makefile  acme_1.sql  acme_2.sql  acme_3.sql  bad_bs.sql  bad_psv.sql  bad_psv2.sql  bad_rev.sql  bad_sql.sql  bad_zero.sql  bla_1.sql  bla_2.sql  bla_3.sql  bla_4.sql  bla_m1.sql  bla_m2.sql  bla_m3.sql  bla_m4.sql  foo_1.sql  foo_2.sql  foo_3.sql  psv-test-infra.sh  test.sh  test_0_cr_rm.sh  test_1_infra_dry_wet.sh  test_2_reg_unreg.sh  test_3_cr_steps.sh  test_4_cr_err.sh  test_5_apply.sh  test_6_foo_table.sh  test_7_catchup.sh  test_8_options.sh  test_9_targets.sh  test_A_reverse.sh
