[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pg_schema_version"]

[project]
name = "pg-schema-version"
authors = [{ name = "Fabien Coelho" }]
description = "Lightweight Postgres Schema Versioning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "CC0 1.0" }
classifiers = [
    "Topic :: Software Development",
    "Topic :: Database",
    "Programming Language :: Python",
    "Programming Language :: SQL",
    "Development Status :: 4 - Beta",
]
version = "0.1"
dependencies = [ ]

[project.optional-dependencies]
dev = ["pyright", "ruff", "coverage"]
pub = ["build", "twine", "wheel"]

[project.scripts]
pg-schema-version = "pg_schema_version:psv"

[project.urls]
repository = "https://github.com/zx80/pg-schema-version"
documentation = "https://zx80.github.io/pg-schema-version/"
