[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pg_schema_version"]

[project]
name = "pg-schema-version"
authors = [{ name = "Fabien Coelho" }]
description = "Simple Postgres Schema Versioning"
readme = "README.md"
requires-python = ">=3.10"
license = "CC0-1.0"
classifiers = [
    "Topic :: Software Development",
    "Topic :: Database",
    "Programming Language :: Python",
    "Programming Language :: SQL",
    "Development Status :: 5 - Production/Stable",
]
version = "1.0"
# no external dependency
dependencies = [ ]

[project.optional-dependencies]
dev = ["pyright", "ruff", "coverage","pymarkdownlnt"]
pub = ["build", "twine", "wheel"]

[project.scripts]
pg-schema-version = "pg_schema_version:psv"

[project.urls]
repository = "https://github.com/zx80/pg-schema-version"
documentation = "https://zx80.github.io/pg-schema-version/"
issues = "https://github.com/zx80/pg-schema-version/issues"
package = "https://pypi.org/project/pg-schema-version"
